# animated-tesla-car-using-rust

./: Cargo.toml  README.md  index.html
src/: app.rs  charge.rs  lib.rs  lock.rs  main.rs  temp.rs  tyre.rs  utils.rs
