[package]
name = "egui-tesla"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
strip = true     # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
log = "0.4"
egui = "0.32.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
egui_flex = "0.4.0"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
egui_minipng = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_extras = { version = "0.32.0", features = ["svg"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[target.'cfg(not(target_os = "android"))'.dependencies.eframe]
version = "0.32.0"
default-features = true

[target.'cfg(target_os = "android")'.dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["gles"]

[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.32.0"
default-features = false
features = [
    "glow",
    "android-native-activity",
    "default_fonts",
]

[target.'cfg(target_os = "android")'.dependencies.egui-winit]
version = "0.32.0"
default-features = false
features = [
    "clipboard",
    "links",
]

[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.15"
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_extras = { version = "0.32.0", features = ["default", "image", "svg"] }
tracing-subscriber = "0.3"

[features]
default = []
native = []


[build-dependencies]
embed-resource = "3.0.5"

[package.metadata.android]
package = "com.egui.tesla"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 34
